tests/fixtures/type_errors/builtin_bitwise_type.airl
;; ERROR: type mismatch
;; bitwise-and expects (Int, Int) not (String, Int)
(bitwise-and "abc" 0xFF)
